Upgrade to Rails 6.1
Note that `Capybara.app_host` now returns `nil` by default and that
breaks tests using `lvh.me` or our custom `app_host` method, so we're
setting `Capybara.app_host` to the value it had in earlier versions of
Rails. I also haven't found a way to remove the code to set the
integration session host in relationable tests which I mentioned in
commit ffc14e499.

Also note that we now filter more parameters, and that they match
regular expressions, so filtering `:passw` means we're filtering
`passwd`, `password`, ...

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -244,6 +244,7 @@ Rails/CreateTableWithTimestamps:
   Exclude:
     - "db/migrate/201[5-8]*"
     - "db/migrate/*install_audited.rb"
+    - "db/migrate/*create_active_storage_variant_records.active_storage.rb"
 
 Rails/Date:
   Enabled: true
