--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -1,5 +1,9 @@
 name: linters
-on: [pull_request]
+on:
+  push:
+  pull_request:
+    branches-ignore:
+      - i18n_master
 
 permissions:
   contents: read
