Use IDPMetadataParse to set up the Idp SAML settings

--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -8,7 +8,7 @@ default: &default
   openam_username: <%= ENV["OPENAM_USERNAME"] %>
   openam_password: <%= ENV["OPENAM_PASSWORD"] %>
   saml_sp_entity_id: <%= ENV["SAML_SP_ENTITY_ID"] || "consul" %>
-  saml_idp_cert: <%= ENV["SAML_IDP_CERT"] %>
+  saml_idp_metadata_url: <%= ENV["SAML_IDP_METADATA_URL"] %>
   saml_idp_sso_service_url: <%= ENV["SAML_IDP_SSO_SERVICE_URL"] || "http://localhost:8081/openam/idpssoinit?metaAlias=/idp&spEntityID=consul&binding=HTTP-POST" %>
   soap_url_svd: <%= ENV["SOAP_URL_SVD"] %>
   soap_url_pet: <%= ENV["SOAP_URL_PET"] %>
