--- a/.github/workflows/kanban.yml
+++ b/.github/workflows/kanban.yml
@@ -11,14 +11,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Assign new pull requests to the reviewing column
-      uses: srggrs/assign-one-project-github-action@1.3.1
+      uses: andrenarchy/assign-one-project-github-action@master
       if: github.event.pull_request.draft == false
       with:
         project: "https://github.com/users/javierm/projects/4"
         column_name: "Reviewing"
+        position: "bottom"
 
     - name: Assign new draft pull requests to the doing column
-      uses: srggrs/assign-one-project-github-action@1.3.1
+      uses: andrenarchy/assign-one-project-github-action@master
       if: github.event.pull_request.draft == true
       with:
         project: "https://github.com/users/javierm/projects/4"
