--- a/.github/workflows/kanban.yml
+++ b/.github/workflows/kanban.yml
@@ -24,4 +24,4 @@ jobs:
       with:
         project: "https://github.com/users/javierm/projects/4"
         column_name: "Doing"
-        position: "after:card-85157953"
+        position: "after:85157953"
