--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -21,7 +21,7 @@ data:
     # - config/locales/**/*.%{locale}.yml
     ## Another gem (replace %#= with %=):
     # - "<%#= %x[bundle show vagrant].chomp %>/templates/locales/%{locale}.yml"
-    - config/locales/custom/%{locale}/*.yml
+    - config/locales/custom/%{locale}/**[^devise|rails|seeds|settings|social_share_button]*.yml
     - config/locales/%{locale}/**[^devise|rails|seeds|settings|social_share_button]*.yml
 
   # Locale files to write new keys to, based on a list of key pattern => file rules. Matched from top to bottom:
