--- a/.erb-lint.yml
+++ b/.erb-lint.yml
@@ -1,5 +1,8 @@
 ---
+EnableDefaultLinters: false
 linters:
+  AllowedScriptType:
+    enabled: true
   ClosingErbTagIndent:
     enabled: true
   ErbSafety:
@@ -9,6 +12,10 @@ linters:
   FinalNewline:
     enabled: true
   NoJavascriptTagHelper:
+    enabled: true
+  ParserErrors:
+    enabled: true
+  RightTrim:
     enabled: true
   SelfClosingTag:
     enabled: false
