--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -209,6 +209,9 @@ Lint/UselessAssignment:
 Lint/Void:
   Enabled: true
 
+Naming/BlockForwarding:
+  Enabled: true
+
 Naming/VariableName:
   Enabled: true
 
