Add and apply Style/ArgumentsForwarding rule
We were using generic names like `args` and `options` which don't really
add anything to `*` or `**` because Ruby required us to.

That's no longer the case in Ruby 3.2, so we can simplify the code a
bit.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -644,6 +644,9 @@ Style/AccessorGrouping:
 Style/AndOr:
   Enabled: true
 
+Style/ArgumentsForwarding:
+  Enabled: true
+
 Style/ArrayCoercion:
   Enabled: true
 
