Unify database configuration files
We had three files that were almost identical, and we can use
environment variables to specify the differences.

Note we're using DB_HOST as the environment instead of using something
like POSTGRES_HOST or PGHOST because DB_HOST is the variable Rails
currently uses when generating new applications [1].

[1] https://github.com/rails/rails/blob/c90a8701e/railties/lib/rails/generators/rails/app/templates/config/databases/postgresql.yml.tt

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ tests:
     paths:
       - vendor/
   variables:
+    DB_HOST: postgres
     POSTGRES_USER: consul
     POSTGRES_PASSWORD: password
     RAILS_ENV: test
