--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     # see https://hub.docker.com/_/postgres/
     image: postgres:13.14
     environment:
+      - DB_HOST=database
+      - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
     # persist the database between containers by storing it in a volume
     volumes:
@@ -34,6 +36,8 @@ services:
       - .:/var/www/consul
       - bundle:/usr/local/bundle
     environment:
+      - DB_HOST=database
+      - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
 volumes:
   db_data: {}
