Apply linter rules to custom code
There are two files I'm not changing because I'm not sure of the
consequences:

* There are many warnings related to the
  app/components/custom/cookies/vendors/scripts_component.html.erb file;
  not sure whether some of them are false positives. We might be missing
  some calls to escape javascript
* In `app/models/custom/legislation/processes/exporter.rb`, there's an
  empty block; not sure why

--- a/.erb-lint.yml
+++ b/.erb-lint.yml
@@ -18,6 +18,8 @@ linters:
       - app/components/layout/subnavigation_component.html.erb
       - app/components/layout/top_links_component.html.erb
       - app/views/admin/site_customization/content_blocks/index.html.erb
+      - app/views/custom/layouts/application.html.erb
+      - app/views/custom/layouts/devise.html.erb
       - app/views/layouts/application.html.erb
       - app/views/layouts/dashboard.html.erb
       - app/views/layouts/devise.html.erb
