--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,6 +36,12 @@ jobs:
         ci_node_index: [0, 1, 2, 3, 4]
     steps:
       - uses: actions/checkout@v4
+      - name: Cache Playwright Chromium browser
+        id: playwright-cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/ms-playwright
+          key: playwright-browsers-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
       - uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
@@ -46,6 +52,12 @@ jobs:
           node-version-file: ".node-version"
       - name: Install node packages
         run: npm clean-install
+      - name: Install Playwright Chromium browser (with deps)
+        if: steps.playwright-cache.outputs.cache-hit != 'true'
+        run: npx playwright install --with-deps chromium
+      - name: Install Playwright Chromium browser deps
+        if: steps.playwright-cache.outputs.cache-hit == 'true'
+        run: npx playwright install-deps chromium
       - name: Install ImageMagick
         run: sudo apt-get update && sudo apt-get install imagemagick
       - name: Remove image-bundled Chrome
