Run apt update to install ImageMagick in CI workflow
We've been getting an error in our CI because some the Ubuntu 24.04
image in GitHub Actions doesn't have an updated package database:

```
E: Failed to fetch mirror+file:
   pool/main/g/ghostscript/libgs-common_10.02.1%7edfsg1-0ubuntu7.4_all.deb
   404  Not Found
E: Failed to fetch mirror+file:
   pool/main/g/ghostscript/libgs10-common_10.02.1%7edfsg1-0ubuntu7.4_all.deb
   404  Not Found
E: Failed to fetch mirror+file:
   pool/main/g/ghostscript/libgs10_10.02.1%7edfsg1-0ubuntu7.4_amd64.deb
   404  Not Found
E: Failed to fetch mirror+file:
   pool/main/g/ghostscript/ghostscript_10.02.1%7edfsg1-0ubuntu7.4_amd64.deb
   404  Not Found
E: Unable to fetch some archives, maybe run apt-get update
   or try with --fix-missing?
```

Running `sudo apt-get update` before trying to install a package solves
the issue.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Install node packages
         run: npm clean-install
       - name: Install ImageMagick
-        run: sudo apt-get install imagemagick
+        run: sudo apt-get update -y && sudo apt-get install imagemagick
       - name: Copy secrets and database files
         run: for i in config/*.example; do cp "$i" "${i/.example}"; done
       - name: Setup database
